# philharmonic

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
docs/: 00-overview.md  03-boundaries.md  05-workflow.md  index.md
src/: lib.rs  webui.rs
src/server/: cli.rs  config.rs  install.rs  mod.rs  reload.rs
webui/: package-lock.json  package.json  tsconfig.json  webpack.config.js
webui/src/: App.tsx  app.css  index.html  index.tsx
webui/src/api/: client.ts
webui/src/components/: JsonViewer.tsx  Layout.tsx  Pagination.tsx  ProtectedRoute.tsx
webui/src/pages/: AuditLog.tsx  Dashboard.tsx  InstanceDetail.tsx  Instances.tsx  Login.tsx  TemplateDetail.tsx  Templates.tsx  TenantSettings.tsx
webui/src/store/: authSlice.ts  index.ts
