[package]
name = "philharmonic"
version = "0.0.0"
edition = "2024"

description = "Philharmonic workflow orchestration system (meta-crate). The system is published as a family of crates; this one is a placeholder and intentionally empty. See philharmonic-types and philharmonic-store for current components."
license = "Apache-2.0 OR MPL-2.0"
repository = "https://github.com/metastable-void/philharmonic"
readme = "README.md"
rust-version = "1.85"

keywords = ["philharmonic", "workflow", "orchestration"]
categories = ["data-structures"]


[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
